force-app/main/default/objects/cogn__Temporary_Object__c/cogn__Temporary_Object__c.object-meta.xml
<CustomObject>
    <label>Temporary Object</label>
    <nameField>
        <label>Temporary_Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporary Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>