force-app/main/default/objects/cogn__Temporary_Object__c/fields/cogn__Apply_To_All__c.field-meta.xml
<CustomField>
    <fullName>cogn__Apply_To_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply To All</label>
    <type>Checkbox</type>
</CustomField>