force-app/main/default/objects/cogn__Temporary_Object__c/fields/cogn__Cognism_Campaign__c.field-meta.xml
<CustomField>
    <fullName>cogn__Cognism_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cognism Campaign</label>
    <referenceTo>cogn__Cognism_Campaign__c</referenceTo>
    <relationshipName>Temporary_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>