force-app/main/default/objects/cogn__Temporary_Object__c/fields/cogn__Cognism_Person_Id__c.field-meta.xml
<CustomField>
    <fullName>cogn__Cognism_Person_Id__c</fullName>
    <label>Cognism Person Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>