force-app/main/default/objects/cogn__Temporary_Object__c/fields/cogn__Needs_To_Create_New_Account__c.field-meta.xml
<CustomField>
    <fullName>cogn__Needs_To_Create_New_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs To Create New Account</label>
    <type>Checkbox</type>
</CustomField>