force-app/main/default/objects/cogn__Temporary_Object__c/fields/cogn__New_Email__c.field-meta.xml
<CustomField>
    <fullName>cogn__New_Email__c</fullName>
    <label>New Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>