force-app/main/default/objects/cogn__Temporary_Object__c/fields/cogn__New_Suggested_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>cogn__New_Suggested_Account_Name__c</fullName>
    <label>New Suggested Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>