force-app/main/default/objects/cogn__Temporary_Object__c/fields/cogn__New_Title__c.field-meta.xml
<CustomField>
    <fullName>cogn__New_Title__c</fullName>
    <label>New Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>