force-app/main/default/objects/cogn__Temporary_Object__c/fields/cogn__Old_Company__c.field-meta.xml
<CustomField>
    <fullName>cogn__Old_Company__c</fullName>
    <label>Old Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>